[package]
name = "pyth_solana_dev1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyth-sdk-solana="0.4.0"
solana-program = "1.8.1"
solana-client = "1.8.1"
solana-sdk = "1.8.1"
num-traits = "0.2.15"
chrono = "0.4.19"